@@ -1,5 +1,7 @@
 2001-08-07  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Frame/CGS4.pm (configure): Add support for .I1BEAM components.
+
 	* Calib/CGS4.pm: Add profile()
 
 	* Calib.pm (readnoise): Add readnoise support
